; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ser-tcp.c_net_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ser-tcp.c_net_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.serial = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.serial*)* @net_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @net_close(%struct.serial* %0) #0 {
  %2 = alloca %struct.serial*, align 8
  store %struct.serial* %0, %struct.serial** %2, align 8
  %3 = load %struct.serial*, %struct.serial** %2, align 8
  %4 = getelementptr inbounds %struct.serial, %struct.serial* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %15

8:                                                ; preds = %1
  %9 = load %struct.serial*, %struct.serial** %2, align 8
  %10 = getelementptr inbounds %struct.serial, %struct.serial* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @close(i32 %11)
  %13 = load %struct.serial*, %struct.serial** %2, align 8
  %14 = getelementptr inbounds %struct.serial, %struct.serial* %13, i32 0, i32 0
  store i32 -1, i32* %14, align 4
  br label %15

15:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
